test/regress/coverage-op-call-error-context.test
; Coverage for op.cc lines 519-522: exception re-throw in calc_call
; When a function call throws, the catch block adds error context
; "While calling function..." and re-throws

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format "%(quantity(account))\n" -> 1
__ERROR__
While evaluating value expression:
  quantity(account)
  ^^^^^^^^^^^^^^^^^
While calling function 'quantity Expenses:Food':
While handling posting from "$FILE", line 6:
>     Expenses:Food    $10.00
Error: No quantity specified for amount
end test
